--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3"
   },
+  "prisma": {
+  "seed": "ts-node prisma/seed.ts"
+}
+  ,
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
