--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,10 @@
 FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm install
 
 COPY . .
 
-EXPOSE 3000
-
-CMD ["npm", "run", "start:dev"]
+CMD ["npm","run","start:dev"]
